--- a/indk.html
+++ b/indk.html
@@ -7,6 +7,23 @@
     <title>Ba2022</title>
 </head>
 <body>
+    <div class="wrappe">
+        <div class="blo">
+            <header class="heade">
+                <div class="heade_ro">
+                    <nav class="heade_ro_na">
+                        <div class="heade_ro_na_ro">
+                            <div class="heade_ro_na_ro_tx1">Bag2022</div>
+                            <div class="heade_ro_na_ro_tx2">Главная</div>
+                            <div class="heade_ro_na_ro_tx3">Каталог</div>
+                            <div class="heade_ro_na_ro_tx4">Цены</div>
+                            <div class="heade_ro_na_ro_tx5">О нас</div>
+                        </div>
+                    </nav>
+                </div>
+            </header>
+        </div>
+    </div>
     
 </body>
 </html>
