--- a/indk.html
+++ b/indk.html
@@ -4,24 +4,116 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styll.css"></link>
     <title>Ba2022</title>
 </head>
 <body>
     <div class="wrappe">
         <div class="blo">
-            <header class="heade">
-                <div class="heade_ro">
-                    <nav class="heade_ro_na">
-                        <div class="heade_ro_na_ro">
-                            <div class="heade_ro_na_ro_tx1">Bag2022</div>
-                            <div class="heade_ro_na_ro_tx2">Главная</div>
-                            <div class="heade_ro_na_ro_tx3">Каталог</div>
-                            <div class="heade_ro_na_ro_tx4">Цены</div>
-                            <div class="heade_ro_na_ro_tx5">О нас</div>
+            <div class="blo_ro">
+                <header class="heade">
+                    <div class="heade_ro">
+                        <nav class="heade_ro_na">
+                            <div class="heade_ro_na_ro">
+                                <div class="heade_ro_na_ro_tx1">Bag2022</div>
+                                <div class="heade_ro_na_ro_tx2">Главная</div>
+                                <div class="heade_ro_na_ro_tx3">Каталог</div>
+                                <div class="heade_ro_na_ro_tx4">Цены</div>
+                                <div class="heade_ro_na_ro_tx5">О нас</div>
+                            </div>
+                        </nav>
+                    </div>
+                </header>
+                <main class="mai">
+                    <div class="mai_ro">
+                        <div class="mai_ro_blo1">
+                            <div class="mai_ro_blo1_ro">
+                                <div class="mai_ro_blo1_ro_desc1">
+                                    <div class="mai_ro_blo1_ro_desc1_ro">
+                                        <div class="mai_ro_blo1_ro_desc1_ro_tx1">Покупайте чемоданы со скидкой до 30%</div>
+                                        <div class="mai_ro_blo1_ro_desc1_ro_tx2">Lorem ipsum dolor sit amet, consectetur adipiscing e incididunt ut labore et dolore magna aliqua. Volutpat ac tincidunt vitae e incididunt ut labore et dolore magna aliqua. Volutpat ac tincidunt vitae semper quis  unt vitae e incididunt ut labore et dolore magna aliqua. Volutpat ac tincidunt vitae semper quis lectlectus nulla. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. Bibendum arcu vitae elementum curabitur vitae nunc sed. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra vel turpis nunc eget lorem dolor sed. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. Bibendum arcu vitae elementum curabitur vitae nunc sed. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra vel turpis nunc eget lorem dolor tincidunt vitae semper quis lectus nulla. Feugiat sed lectus vestibulum mattis ullamcorper velit sed. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. Bibendum arcu vitae elementum curabitur vitae nunc sed. Arcu vitae vitae elementum curabitur vitae nunc sed. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra vel turpis nunc eget lorem dolor sed. Egestas maecenas pharetra convallis posuere morbi leo urna molestie. Bibendum arcu vitae elementum curabitur vitae nunc sed. Arcu vitae elementum curabitur vitae nunc sed velit. Pharetra vel turpis nunc elementum curabitur vitae nunc sed velit. Pharetrc sed velit. Pharetra vel turpis nunc eget lorem dolor sed.</div>
+                                        <input type="button" class="mai_ro_blo1_ro_desc1_ro_but1" value="Заказать"></input>
+                                    </div>
+                                </div>
+                                <div class="mai_ro_blo1_ro_desc2">
+                                    <div class="mai_ro_blo1_ro_desc2_ro">
+                                        <img src="img/PngItem_1265863.png" alt="Фото чемод" class="mai_ro_blo1_ro_desc2_ro_im1"></img>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                    </nav>
-                </div>
-            </header>
+
+                        <div class="mai_ro_blo2">
+                            <div class="mai_ro_blo2_ro">
+                                <div class="mai_ro_blo2_ro_desc1">
+                                    <div class="mai_ro_blo2_ro_desc1_ro">
+                                        <div class="mai_ro_blo2_ro_desc1_ro_tx1">Выбирите свой чемодан</div>
+                                    </div>
+                                </div>
+                                <div class="mai_ro_blo2_ro_desc2">
+                                    <div class="mai_ro_blo2_ro_desc2_ro">
+                                        <div class="mai_ro_blo2_ro_desc2_ro_blo1">
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo1_ro">
+                                                <img src="img/chemodan_delsey_1.jpg" alt="Фото чемод" class="mai_ro_blo2_ro_desc2_ro_blo1_ro_im1"></img>
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo1_ro_tx1">Lorem ipsum dolor sit</div>
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo1_ro_tx2">Lorem ipsum dolor sit amet, consectetur adipiscing   sit amet, consectetur adipiscing</div>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo2">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo2_ro">
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo2_ro_tx1">Выбирите размер</div>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo3">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro">
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro_tx1">19</div>
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro_tx2">27</div>
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro_tx3">33</div>
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro_tx4">57</div>
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo3_ro_tx5">71</div>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo4">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo4_ro">
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo4_ro_tx1">Выбирите цвет</div>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo5">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo5_ro">
+                                                    <input type="radio" class="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele1" id="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele1"></input>
+                                                    <label class="mai_ro_blo2_ro_desc2_ro_blo5_ro_tx1" for="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele1">1</label>
+                                                    <input type="radio" class="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele2" id="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele2"></input>
+                                                    <label class="mai_ro_blo2_ro_desc2_ro_blo5_ro_tx2" for="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele2">2</label>
+                                                    <input type="radio" class="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele3" id="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele3"></input>
+                                                    <label class="mai_ro_blo2_ro_desc2_ro_blo5_ro_tx3" for="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele3">3</label>
+                                                    <input type="radio" class="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele4" id="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele4"></input>
+                                                    <label class="mai_ro_blo2_ro_desc2_ro_blo5_ro_tx4" for="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele4">4</label>
+                                                    <input type="radio" class="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele5" id="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele5"></input>
+                                                    <label class="mai_ro_blo2_ro_desc2_ro_blo5_ro_tx5" for="mai_ro_blo2_ro_desc2_ro_blo5_ro_sele5">5</label>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo6">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo6_ro">
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo6_ro_tx1">Цена</div>
+                                                </div>
+                                            </div>
+                                            <div class="mai_ro_blo2_ro_desc2_ro_blo7">
+                                                <div class="mai_ro_blo2_ro_desc2_ro_blo7_ro">
+                                                    <div class="mai_ro_blo2_ro_desc2_ro_blo7_ro_tx1">3 999₽</div>
+                                                    <input type="button" class="mai_ro_blo2_ro_desc2_ro_blo7_ro_but" value="Купить"></input>
+                                                </div>
+                                            </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </main>
+                <footer class="foote">3</footer>
+            </div>
         </div>
     </div>
     
