--- a/indk.html
+++ b/indk.html
@@ -764,6 +764,87 @@
                                             <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
                                         </div>
                                     </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
+
+                                    <div class="foote_ro_blo2_ro_blo1">
+                                        <div class="foote_ro_blo2_ro_blo1_ro">
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx1">Главная</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx2">Каталог</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx3">Цены</div>
+                                            <div class="foote_ro_blo2_ro_blo1_ro_tx4">О нас</div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
