--- a/indk.html
+++ b/indk.html
@@ -24,7 +24,7 @@
                             </div>
                         </nav>
                     </div>
-                </header>
+                </header> fdsdfsdfsdfsfsdfsfsdf
                 <main class="mai">
                     <div class="mai_ro">
                         <div class="mai_ro_blo1">
