--- a/indk.html
+++ b/indk.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="mai_ro_blo1_ro_desc2">
                                     <div class="mai_ro_blo1_ro_desc2_ro">
-                                        <img src="img/PngItem_1265863.png" alt="Фото чемод" class="mai_ro_blo1_ro_desc2_ro_im1"></img>
+                                        <img src="img/chemodan_delsey_1.jpg" alt="Фото чемод" class="mai_ro_blo1_ro_desc2_ro_im1"></img>
                                     </div>
                                 </div>
                             </div>
